--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "echarts": "^4.1.0",
     "element-ui": "2.3.4",
     "js-cookie": "2.2.0",
+    "lodash": "^4.17.10",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "stylus": "^0.54.5",
