--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "echarts": "^4.1.0",
     "element-ui": "2.3.4",
     "js-cookie": "2.2.0",
+    "screenfull": "3.3.2",
     "lodash": "^4.17.10",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
     "vue": "2.5.10",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
@@ -61,6 +60,8 @@
     "sass-loader": "6.0.6",
     "semver": "5.4.1",
     "shelljs": "0.7.8",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "svg-sprite-loader": "3.5.2",
     "uglifyjs-webpack-plugin": "1.1.3",
     "url-loader": "0.6.2",
