--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "0.17.1",
+    "connect-history-api-fallback": "^1.5.0",
     "echarts": "^4.1.0",
     "element-ui": "2.3.4",
     "file-saver": "^1.3.8",
